packages/fxa-payments-server/src/components/PlanDetails/index.scss
@import '../../../../fxa-content-server/app/styles/variables';
@import '../../../../fxa-content-server/app/styles/breakpoints';

.payment-confirmation + .plan-details-component {
  @include max-width('tablet') {
    grid-row: 3/4;
    margin-top: 24px;
  }

  @include max-width('tablet') {
    margin: 16px 16px 32px;
    .plan-details-component-card {
      box-shadow: 0 -1px white, 0 1px white,
        -2px 2px 2px -2px rgba(12, 12, 13, 0.1),
        2px 2px 2px -2px rgba(12, 12, 13, 0.1);
      text-align: center;
      position: relative;
    }
  }
}

.product-payment + .plan-details-component {
  @include max-width('tablet') {
    margin-left: 16px;
    margin-right: 16px;
    margin-bottom: 0;
    .plan-details-component-card {
      border-radius: 0 0 8px 8px;
      box-shadow: 0 -1px white, 0 1px white,
        -2px 2px 2px -2px rgba(12, 12, 13, 0.1),
        2px 2px 2px -2px rgba(12, 12, 13, 0.1);
      text-align: center;
      position: relative;
    }
  }
}

.plan-details-component {
  font-size: 15px;
  margin: 32px 0;
  padding: 0;

  @include max-width('tablet') {
    grid-row: 2/3;
    margin-top: 0;
  }

  @include min-width('tablet') {
    grid-row: auto;
    padding: 0;
  }

  @media (orientation: landscape) and (max-width: 844px) {
    border-radius: 0 0 8px 8px;
    margin: 0 16px 0 16px;
    grid-row: 2/3;

    .container.plan-details-component-card {
      border-radius: 0 0 8px 8px;
      box-shadow: 0 -1px white, 0 1px white,
        -2px 2px 2px -2px rgba(12, 12, 13, 0.1),
        2px 2px 2px -2px rgba(12, 12, 13, 0.1);
    }
  }

  .plan-details-component-inner {
    @include min-width('tablet') {
      max-width: 327px;
      position: fixed;
    }
  }

  .plan-details-component-card {
    background: $color-white;
    border-radius: 8px;
    box-shadow: 0 1px 4px rgba(12, 12, 13, 0.1);
  }

  .plan-details-logo-wrap {
    align-items: center;
    background: #20123a;
    border-radius: 8px;
    display: flex;
    flex-shrink: 0;
    height: 64px;
    justify-content: center;
    width: 64px;
  }

  .plan-details-logo-wrap img {
    height: 32px;
    width: 32px;
  }

  .plan-details-header-wrap {
    display: flex;
  }

  .plan-details-heading-wrap {
    display: flex;
    flex-direction: column;
    padding-left: 16px;
    text-align: left;

    .plan-details-product {
      color: $grey-80;
      font-size: 15px;
      font-weight: 600;
      line-height: 19px;
      margin: 0 4px 0 0;
      word-wrap: break-word;
    }

    .plan-details-description {
      color: $grey-50;
      margin-top: 4px;
    }
  }

  .plan-details-header {
    border-bottom: 1px solid $grey-30;
    display: flex;
    justify-content: space-between;
    margin: 0 16px;
    padding: 16px 0;

    p {
      margin: 0;
    }
  }

  .plan-details-list {
    border-bottom: 1px solid $grey-30;
    color: rgba(12, 12, 13, 0.8);
    // list-style-position: inside;
    margin-top: 10px;
    // 1px bottom is a hack to get the padding from the last li
    // to show up on tablet and higher that have position: fixed;
    padding: 0 16px 1px;
    text-align: left;

    h4 {
      margin: 16px 0;
    }

    ul {
      color: $grey-50;
      margin: 0;
      padding-left: 12px;
    }

    li {
      margin-bottom: 16px;
      line-height: 22px;

      span {
        padding-left: 8px;
      }

      &::marker {
        font-size: 12px;
      }
    }

    @include min-width('tablet') {
      border-bottom: 0;
    }

    .plan-details-coupon-details {
      border-bottom: 1px solid #d7d7db;
      margin-bottom: 16px;
      padding-bottom: 24px;
    }
  }

  .footer {
    text-align: center;
  }

  .btn {
    background: none;
    border: 1px solid transparent;
    color: $blue-60;
    font-size: 15px;
    font-weight: normal;
    height: initial;
    line-height: 22px;
    margin: 9px 0;
    outline: none;
    padding: 7px 6px 7px 25px;
    position: relative;
    width: initial;

    &:focus {
      border: 1px solid #0a84ff;
      box-shadow: unset;
      padding: 7px 16px 7px 40px;
    }
  }

  .arrow::before {
    background: url('./images/chevron.svg');
    content: '';
    display: inline-block;
    height: 16px;
    left: 0;
    position: absolute;
    top: 10px;
    width: 24px;
  }

  .arrow:focus::before {
    left: 14px;
  }

  .up-arrow::before {
    transform: rotate(180deg);
  }

  .plan-details-total {
    padding: 24px 0;
    width: 100%;
    border-top: 1px solid $grey-30;

    .plan-details-total-inner {
      display: flex;
      justify-content: space-between;
      gap: 8px;
    }

    p {
      margin: 0;
      padding: unset;
    }

    .label {
      color: #6d6d6e;
      font-weight: 600;
      margin-top: auto;
    }

    .total-price {
      color: rgba(12, 12, 13, 0.8);
      font-size: 18px;
      font-weight: 600;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      margin-top: auto;
    }

    .coupon-info {
      padding-top: 24px;
      color: #1cc4a0;
      display: flex;
      font-size: 15px;
      font-weight: normal;
      justify-content: center;
      align-items: center;
    }

    .coupon-info::before {
      background-image: url('./images/Information.svg');
      background-position: center;
      background-repeat: no-repeat;
      content: '';
      display: inline-block;
      height: 40px;
      margin-right: 12px;
      width: 40px;
    }
  }
}

